# Kaprekar-constant

./: CMakeLists.txt  README.md  kaprekar.cpp  kaprekar.h  main.cpp  sonar-project.properties  testFile.txt
src/: Kaprekar.cpp  Kaprekar.h  kaprekar.cpp  kaprekar.h  main.cpp
test/: CMakeLists.txt  KaprekarTest.cpp  QueryTest.cpp
tests/: CMakeLists.txt
